5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1602_842.log
== SUBMITION (2019-03-25 18:50:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a 
num=int(input("quatro digitos:""))
numero1=(num//1000)
numero2=(num//100)%10
numero3=(num//10)%10
numero4=(num%10)
soma=(numero1+numero2+numero3+numero4)
print(soma)

-- EXECUTION TIME:
0.194254
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 4
    num=int(input("quatro digitos:""))
                                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 18:51:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a 
num=int(input("quatro digitos:""))
numero1=(num//1000)
numero2=(num//100) %10
numero3=(num//10) %10
numero4=(num%10)
soma=(numero1+numero2+numero3+numero4)
print(soma)

-- EXECUTION TIME:
0.16347
-- ERROR:
  File "/home/codebench/codes/1602/842/main.py", line 4
    num=int(input("quatro digitos:""))
                                     ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 19:15:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a 
num=int(input("quatro digitos:"))
numero1=(num//1000)
numero2=(num//100) %10
numero3=(num//10) %10
numero4=(num%10)
soma=(numero1+numero2+numero3+numero4)
print(soma)

-- EXECUTION TIME:
0.202907
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
